--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^6.1.0",
     "axios": "^1.8.4",
     "echarts": "^5.6.0",
     "element-plus": "^2.9.6",
