--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,22 @@ coverage
 *.sw?
 
 *.tsbuildinfo
+
+# 本地开发环境文件
+.env.local
+.env.*.local
+
+# Vite 缓存
+.cache/
+.temp/
+
+# 系统文件
+.DS_Store
+Thumbs.db
+
+# TypeScript 编译输出（如果使用 TS）
+*.tsbuildinfo
+
+# 其他
+*.log
+*.tmp
