--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "element-plus": "^2.9.6",
     "lodash": "^4.17.21",
     "pinia": "^3.0.1",
+    "quill": "^2.0.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
