--- a/package.json
+++ b/package.json
@@ -11,10 +11,15 @@
   },
   "dependencies": {
     "@element-plus/icons-vue": "^2.3.1",
-    "@tinymce/tinymce-vue": "^6.1.0",
+    "@rdkit/rdkit": "^2024.3.5-1.0.0",
+    "@vue-flow/background": "^1.3.2",
+    "@vue-flow/controls": "^1.1.2",
+    "@vue-flow/core": "^1.42.4",
+    "@vue-flow/node-resizer": "^1.4.0",
     "axios": "^1.8.4",
     "echarts": "^5.6.0",
     "element-plus": "^2.9.6",
+    "latex.js": "^0.12.6",
     "lodash": "^4.17.21",
     "pinia": "^3.0.1",
     "quill": "^2.0.3",
@@ -22,10 +27,13 @@
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
+    "@types/node": "^22.13.13",
     "@vitejs/plugin-vue": "^5.2.1",
+    "@vue/compiler-sfc": "^3.5.13",
     "prettier": "3.5.3",
     "sass": "^1.86.0",
     "sass-loader": "^16.0.5",
+    "typescript": "^5.8.2",
     "unplugin-auto-import": "^19.1.1",
     "unplugin-vue-components": "^28.4.1",
     "vite": "^6.2.1",
