--- a/.env.development
+++ b/.env.development
@@ -1,2 +1,3 @@
 VITE_APP_BASE_API=http://192.168.2.200
 VITE_APP_TITLE=Development Mode
+VITE_KETCHER_PATH=/third-party/ketcher-standalone-3.1.0/index.html
