--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
     "axios": "^1.8.4",
     "echarts": "^5.6.0",
     "element-plus": "^2.9.6",
-    "latex.js": "^0.12.6",
+    "html2canvas": "^1.4.1",
     "lodash": "^4.17.21",
+    "mathlive": "^0.105.0",
     "pinia": "^3.0.1",
     "quill": "^2.0.3",
     "vue": "^3.5.13",
