--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "lodash": "^4.17.21",
     "mathlive": "^0.105.0",
     "pinia": "^3.0.1",
+    "print-js": "^1.6.0",
     "quill": "^2.0.3",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
