--- a/package.json
+++ b/package.json
@@ -10,6 +10,12 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@babylonjs/core": "^8.16.3",
+    "@babylonjs/gui": "^8.16.3",
+    "@babylonjs/inspector": "^8.16.3",
+    "@babylonjs/loaders": "^8.16.3",
+    "@babylonjs/materials": "^8.16.3",
+    "@babylonjs/procedural-textures": "^8.16.3",
     "@element-plus/icons-vue": "^2.3.1",
     "@rdkit/rdkit": "^2024.3.5-1.0.0",
     "@vue-flow/background": "^1.3.2",
