add types lang=ts

--- a/.gitignore
+++ b/.gitignore
@@ -6,14 +6,14 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
+*.zip
 node_modules
 .DS_Store
 dist
 dist-ssr
 coverage
 *.local
-
+vite.config.ts
 /cypress/videos/
 /cypress/screenshots/
 
@@ -47,3 +47,32 @@ Thumbs.db
 # 其他
 *.log
 *.tmp
+
+# 依赖目录
+
+.pnpm-store/
+
+
+# 日志文件
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# 编辑器目录和文件
+
+# 测试相关
+coverage/
+.nyc_output/
+
+# 类型Script 编译输出
+*.js.map
+
+
+# 本地历史文件
+.history/
+
+# 调试文件
+debug.log
+package-lock.json
+
