--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@babylonjs/core": "^8.16.3",
     "@babylonjs/gui": "^8.16.3",
+    "@babylonjs/havok": "^1.3.10",
     "@babylonjs/inspector": "^8.16.3",
     "@babylonjs/loaders": "^8.16.3",
     "@babylonjs/materials": "^8.16.3",
@@ -24,27 +25,27 @@
     "@vue-flow/node-resizer": "^1.4.0",
     "axios": "^1.8.4",
     "echarts": "^5.6.0",
-    "element-plus": "^2.9.6",
+    "element-plus": "^2.10.4",
     "html2canvas": "^1.4.1",
     "lodash": "^4.17.21",
     "mathlive": "^0.105.0",
     "pinia": "^3.0.1",
     "print-js": "^1.6.0",
     "quill": "^2.0.3",
-    "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue": "^3.5.17",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@types/node": "^22.13.13",
-    "@vitejs/plugin-vue": "^5.2.1",
-    "@vue/compiler-sfc": "^3.5.13",
+    "@vitejs/plugin-vue": "^6.0.0",
+    "@vue/compiler-sfc": "^3.5.17",
     "prettier": "3.5.3",
     "sass": "^1.86.0",
     "sass-loader": "^16.0.5",
     "typescript": "^5.8.2",
     "unplugin-auto-import": "^19.1.1",
     "unplugin-vue-components": "^28.4.1",
-    "vite": "^6.2.1",
+    "vite": "^7.0.5",
     "vite-plugin-vue-devtools": "^7.7.2"
   }
 }
